--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,22 @@ body {
 /* start clock-container */
 
 .clock-container {
-    height: 90vh;
+    height: 70vh;
     width: 85vw;
 
     display: grid;
-    grid-template-rows: 20% 1fr 1fr 45%;
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-areas:
+        "."
+        "clock-title"
+        "."
+        "break-label"
+        "."
+        "session-label"
+        "."
+        "timer-label"
+        ".";
+
 
     border: 5px solid var(--cc-border-color);
     -webkit-box-shadow: 0px 0px 39px 7px var(--cc-box-shadow-color);
@@ -54,32 +65,39 @@ body {
 }
 
 .clock-title {
+    grid-area: clock-title;
     font-size: 2rem;
     text-align: center;
-    margin: 1rem;
 }
 
 /* end clock-container */
 
 /* start label */
 
+#break-label {
+    grid-area: break-label;
+}
+
+#session-label {
+    grid-area: session-label;
+}
+
 #break-label,
 #session-label {
     display: grid;
     grid-template: repeat(2, 1fr) / repeat(3, 1fr);
-    width: 100%;
 }
 
 #break-label h2 {
     grid-column: 1 / span 3;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 #session-label h2 {
     grid-column: 1 / span 3;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 #break-decrement,
@@ -100,6 +118,7 @@ body {
     grid-column: 2 / span 1;
     align-self: center;
     justify-self: center;
+    font-size: 1.3rem;
 }
 
 #break-increment,
@@ -116,6 +135,7 @@ body {
 }
 
 #timer-label {
+    grid-area: timer-label;
     display: grid;
     grid-template: 20% 1fr 20% / repeat(2, 1fr);
     margin: 1rem;
@@ -161,38 +181,31 @@ body {
 
 /* rwd */
 
-@media (min-width: 769px) {
+@media (min-width: 1025px) {
     .clock-container {
         height: 80vh;
         width: 70vw;
-        grid-template-columns: 3% 1fr 3% 1fr 3%;
-        grid-template-rows: 15% 1fr 60%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(7, 1fr);
+
+        grid-template-areas:
+            ". ."
+            "clock-title clock-title"
+            ". ."
+            "break-label session-label"
+            ". ."
+            "timer-label timer-label"
+            ". .";
     }
 
     .clock-title {
         font-size: 2rem;
-        grid-column: 1 / span 4;
-        grid-row: 1/ span 1;
-    }
 
-    #break-label {
-        grid-column: 2 / span 1;
-        grid-row: 2/ span 1;
-    }
-
-    #session-label {
-        grid-column: 4 / span 1;
-        grid-row: 2/ span 1;
     }
 
     #break-label h2,
     #session-label h2 {
         font-size: 1.3rem
-    }
-
-    #timer-label {
-        grid-column: 1 / span 4;
-        grid-row: 3/ span 1;
     }
 
     #timer-label h2 {
@@ -201,5 +214,45 @@ body {
 
     #time-left {
         font-size: 5rem;
+    }
+}
+
+@media (min-width: 1400px) {
+    .clock-container {
+        width: 60vw;
+    }
+
+    .clock-title {
+        font-size: 2.6rem;
+    }
+
+    #break-label h2,
+    #session-label h2 {
+        font-size: 1.4rem
+    }
+
+    #timer-label h2 {
+        font-size: 3rem;
+    }
+
+    #time-left {
+        font-size: 8rem;
+    }
+
+    #start_stop,
+    #reset {
+        width: 20vw;
+    }
+
+    #break-length,
+    #session-length {
+        font-size: 2rem;
+    }
+
+    #break-increment,
+    #session-increment,
+    #break-decrement,
+    #session-decrement {
+        width: 7vw;
     }
 }
